Scrollbar fix

--- a/src/components/PackageTabs/Tabs.module.css
+++ b/src/components/PackageTabs/Tabs.module.css
@@ -10,6 +10,7 @@
 .list {
   overflow: scroll;
   flex-wrap: nowrap;
+  scrollbar-width: none;
   &:before {
     border-color: transparent;
   }
